--- a/redshift.yaml
+++ b/redshift.yaml
@@ -306,17 +306,17 @@ Resources:
                   distkey (O_ORDERKEY)
                   sortkey (O_ORDERDATE);
               """)
-              run_query(conn, """
-                  COPY public.nation FROM 's3://aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/sample_data/nation/nation.tbl.'
-                  iam_role '${RedshiftAccessRole.Arn}'
-                  region 'us-east-1' lzop delimiter '|' COMPUPDATE PRESET;
+             #run_query(conn, """
+                  #COPY public.nation FROM 's3://aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/sample_data/nation/nation.tbl.'
+                 # iam_role '${RedshiftAccessRole.Arn}'
+                # region 'us-east-1' lzop delimiter '|' COMPUPDATE PRESET;
               """)
               run_query(conn, """
-                  copy public.orders from 's3://aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/sample_data/orders/orders.tbl.'
-                  iam_role '${RedshiftAccessRole.Arn}'
-                  region 'us-east-1' lzop delimiter '|' COMPUPDATE PRESET;
+                  #copy public.orders from 's3://aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/sample_data/orders/orders.tbl.'
+                  #iam_role '${RedshiftAccessRole.Arn}'
+                  #region 'us-east-1' lzop delimiter '|' COMPUPDATE PRESET;
               """)
-              cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, {})
+             # cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, {})
       Handler: "index.lambda_handler"
       Timeout: 900
       Role:
@@ -338,8 +338,8 @@ Resources:
       CompatibleRuntimes: 
         - python3.7
       Content: 
-        S3Bucket: aws-bigdata-blog
-        S3Key: artifacts/automate-redshift-etl-dbt/python_libs.zip
+        #S3Bucket: aws-bigdata-blog
+        #S3Key: artifacts/automate-redshift-etl-dbt/python_libs.zip
       Description: Package for redshift connection
       LayerName: RedshiftUtil
       LicenseInfo: MIT
