--- a/redshift.yaml
+++ b/redshift.yaml
@@ -338,8 +338,8 @@ Resources:
       CompatibleRuntimes: 
         - python3.7
       Content: 
-        #S3Bucket: aws-bigdata-blog
-        #S3Key: artifacts/automate-redshift-etl-dbt/python_libs.zip
+        S3Bucket: aws-bigdata-blog
+        S3Key: artifacts/automate-redshift-etl-dbt/python_libs.zip
       Description: Package for redshift connection
       LayerName: RedshiftUtil
       LicenseInfo: MIT
