--- a/redshift (2).yml
+++ b/redshift (2).yml
@@ -306,16 +306,16 @@ Resources:
                   distkey (O_ORDERKEY)
                   sortkey (O_ORDERDATE);
               """)
-           #  run_query(conn, """
-            #      COPY public.nation FROM 's3://aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/sample_data/nation/nation.tbl.'
-            #      iam_role '${RedshiftAccessRole.Arn}'
-             #     region 'us-east-1' lzop delimiter '|' COMPUPDATE PRESET;
-             # """)
-            #  run_query(conn, """
-            #      copy public.orders from 's3://aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/sample_data/orders/orders.tbl.'
-             #     iam_role '${RedshiftAccessRole.Arn}'
-             #     region 'us-east-1' lzop delimiter '|' COMPUPDATE PRESET;
-             # """)
+            run_query(conn, """
+                   COPY public.nation FROM 's3://aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/sample_data/nation/nation.tbl.'
+                   iam_role '${RedshiftAccessRole.Arn}'
+                   region 'us-east-1' lzop delimiter '|' COMPUPDATE PRESET;
+               """)
+               run_query(conn, """
+                  copy public.orders from 's3://aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/sample_data/orders/orders.tbl.'
+                  iam_role '${RedshiftAccessRole.Arn}'
+                  region 'us-east-1' lzop delimiter '|' COMPUPDATE PRESET;
+              """)
                  cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, {})
       Handler: "index.lambda_handler"
       Timeout: 900
@@ -324,25 +324,25 @@ Resources:
           - LambdaIngestFunctionRole
           - Arn
       Runtime: python3.7
-     # Layers:
-     #  - !Ref LambdaLayer
+      Layers:
+       - !Ref LambdaLayer
       VpcConfig: 
         SubnetIds: 
           - !Ref PrivateSubnet
         SecurityGroupIds:
           - !Ref LambdaSecurityGroup
 
- # LambdaLayer:
-  #  Type: AWS::Lambda::LayerVersion
-   # Properties: 
-   #   CompatibleRuntimes: 
-    #    - python3.7
-   #   Content: 
-     #   S3Bucket: aws-bigdata-blog
-     #   S3Key: artifacts/automate-redshift-etl-dbt/python_libs.zip
-     # Description: Package for redshift connection
-     # LayerName: RedshiftUtil
-     # LicenseInfo: MIT
+   LambdaLayer:
+     Type: AWS::Lambda::LayerVersion
+     Properties: 
+       CompatibleRuntimes: 
+         - python3.7
+       Content: 
+         S3Bucket: aws-bigdata-blog
+         S3Key: artifacts/automate-redshift-etl-dbt/python_libs.zip
+       Description: Package for redshift connection
+       LayerName: RedshiftUtil
+      LicenseInfo: MIT
 
   LambdaSecurityGroup:
     Type: AWS::EC2::SecurityGroup
