--- a/redshift (2).yml
+++ b/redshift (2).yml
@@ -1,5 +1,5 @@
 # Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
-# SPDX-License-Identifier: MIT-
+# SPDX-License-Identifier: MIT-0
 
 AWSTemplateFormatVersion: 2010-09-09
 
@@ -306,17 +306,22 @@ Resources:
                   distkey (O_ORDERKEY)
                   sortkey (O_ORDERDATE);
               """)
-            run_query(conn, """
-                   COPY public.nation FROM 's3://aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/sample_data/nation/nation.tbl.'
-                   iam_role '${RedshiftAccessRole.Arn}'
-                   region 'us-east-1' lzop delimiter '|' COMPUPDATE PRESET;
-               """)
-               run_query(conn, """
+              run_query(conn, """
+                  COPY public.nation FROM 's3://aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/sample_data/nation/nation.tbl.'
+                  iam_role '${RedshiftAccessRole.Arn}'
+                  region 'us-east-1' lzop delimiter '|' COMPUPDATE PRESET;
+              """)
+              run_query(conn, """
+                  copy public.customer from 's3://aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/sample_data/customer/customer.tbl.'
+                  iam_role '${RedshiftAccessRole.Arn}'
+                  region 'us-east-1' lzop delimiter '|' COMPUPDATE PRESET;
+              """)
+              run_query(conn, """
                   copy public.orders from 's3://aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/sample_data/orders/orders.tbl.'
                   iam_role '${RedshiftAccessRole.Arn}'
                   region 'us-east-1' lzop delimiter '|' COMPUPDATE PRESET;
               """)
-                 cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, {})
+              cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, {})
       Handler: "index.lambda_handler"
       Timeout: 900
       Role:
@@ -325,23 +330,23 @@ Resources:
           - Arn
       Runtime: python3.7
       Layers:
-       - !Ref LambdaLayer
+        - !Ref LambdaLayer
       VpcConfig: 
         SubnetIds: 
           - !Ref PrivateSubnet
         SecurityGroupIds:
           - !Ref LambdaSecurityGroup
 
-   LambdaLayer:
-     Type: AWS::Lambda::LayerVersion
-     Properties: 
-       CompatibleRuntimes: 
-         - python3.7
-       Content: 
-         S3Bucket: aws-bigdata-blog
-         S3Key: artifacts/automate-redshift-etl-dbt/python_libs.zip
-       Description: Package for redshift connection
-       LayerName: RedshiftUtil
+  LambdaLayer:
+    Type: AWS::Lambda::LayerVersion
+    Properties: 
+      CompatibleRuntimes: 
+        - python3.7
+      Content: 
+        S3Bucket: aws-bigdata-blog
+        S3Key: artifacts/automate-redshift-etl-dbt/python_libs.zip
+      Description: Package for redshift connection
+      LayerName: RedshiftUtil
       LicenseInfo: MIT
 
   LambdaSecurityGroup:
