--- a/redshift (2).yml
+++ b/redshift (2).yml
@@ -1,5 +1,5 @@
 # Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
-# SPDX-License-Identifier: MIT-00
+# SPDX-License-Identifier: MIT-0
 
 AWSTemplateFormatVersion: 2010-09-09
 
@@ -8,19 +8,223 @@ Description: 'Template to deploy Redshift and VPC with public and private subnet
 Resources:
 
   ############# VPC, Private subnet, Public subnet ##################
+  VPC:
+    Type: 'AWS::EC2::VPC'
+    Properties:
+      CidrBlock: 172.16.0.0/16
+      InstanceTenancy: default
+      EnableDnsSupport: true
+      EnableDnsHostnames: false
+
+  PublicSubnet:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+      CidrBlock: 172.16.0.0/24
+      VpcId: !Ref VPC
+      AvailabilityZone: "us-east-1a"
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value: PublicSubnet
+
+  PrivateSubnet:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+      CidrBlock: 172.16.2.0/24
+      VpcId: !Ref VPC
+      AvailabilityZone: "us-east-1a"
+      Tags:
+        - Key: Name
+          Value: PrivateSubnet
+
+  NetworkAcl:
+    Type: 'AWS::EC2::NetworkAcl'
+    Properties:
+      VpcId: !Ref VPC
+
+  InboundNetworkAclEntry:
+    Type: 'AWS::EC2::NetworkAclEntry'
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: 'False'
+      Protocol: '-1'
+      RuleAction: allow
+      RuleNumber: '100'
+      NetworkAclId: !Ref NetworkAcl
+
+  OutboundNetworkAclEntry:
+    Type: 'AWS::EC2::NetworkAclEntry'
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: 'True'
+      Protocol: '-1'
+      RuleAction: allow
+      RuleNumber: '100'
+      NetworkAclId: !Ref NetworkAcl
+
+  NetworkAclPublicSubnet:
+    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
+    DependsOn:
+    - InboundNetworkAclEntry
+    - OutboundNetworkAclEntry
+    Properties:
+      NetworkAclId: !Ref NetworkAcl
+      SubnetId: !Ref PublicSubnet
+
+  NetworkAclPrivateSubnet:
+    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
+    DependsOn:
+    - InboundNetworkAclEntry
+    - OutboundNetworkAclEntry
+    Properties:
+      NetworkAclId: !Ref NetworkAcl
+      SubnetId: !Ref PrivateSubnet
+
+  InternetGateway:
+    Type: 'AWS::EC2::InternetGateway'
+
+  InternetGatewayAttachment:
+    Type: 'AWS::EC2::VPCGatewayAttachment'
+    Properties:
+      VpcId: !Ref VPC
+      InternetGatewayId: !Ref InternetGateway
+
+  NatGatewayEIP:
+    Type: AWS::EC2::EIP
+    Properties:
+      Domain: vpc
+
+  NatGateway:
+    Type: AWS::EC2::NatGateway
+    Properties:
+      AllocationId: !GetAtt NatGatewayEIP.AllocationId
+      SubnetId:
+        Ref: PublicSubnet
+
+  PublicRouteTable:
+    Type: 'AWS::EC2::RouteTable'
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+        - Key: Name
+          Value: Public Route Table
+
+  PublicRouteTableSubnet:
+    Type: 'AWS::EC2::SubnetRouteTableAssociation'
+    Properties:
+      RouteTableId: !Ref PublicRouteTable
+      SubnetId: !Ref PublicSubnet
+
+  PrivateRouteTable:
+    Type: 'AWS::EC2::RouteTable'
+    Properties:
+      VpcId: !Ref VPC
+      Tags:
+        - Key: Name
+          Value: Private Route Table1
+
+  PrivateRouteTableSubnet:
+    Type: 'AWS::EC2::SubnetRouteTableAssociation'
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable
+      SubnetId: !Ref PrivateSubnet
+
+  Route2InternetGateway:
+    Type: 'AWS::EC2::Route'
+    Properties:
+      DestinationCidrBlock: 0.0.0.0/0
+      RouteTableId: !Ref PublicRouteTable
+      GatewayId: !Ref InternetGateway
+    DependsOn: 
+    - InternetGatewayAttachment
+    - PublicRouteTableSubnet
+
+  Route2NatGateway:
+    Type: 'AWS::EC2::Route'
+    DependsOn:
+    - PrivateRouteTableSubnet
+    Properties:
+      DestinationCidrBlock: 0.0.0.0/0
+      RouteTableId: !Ref PrivateRouteTable
+      NatGatewayId: !Ref NatGateway
+
+
+  ######### REDSHIFT : IAM role, cluster, security group, secret manager ##########
+  RedshiftAccessRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          -
+            Effect: Allow
+            Principal:
+              Service:
+                - redshift.amazonaws.com
+            Action:
+              - sts:AssumeRole
   
-  myCluster: 
-  Type: "AWS::Redshift::Cluster"
-  Properties:
-    DBName: "mydb"
-    MasterUsername: "master"
-    MasterUserPassword: 
-      Ref: "MasterUserPassword"
-    NodeType: "ds2.xlarge"
-    ClusterType: "single-node"
-    Tags:
-      - Key: foo
-        Value: bar
+  AccessPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      ManagedPolicyName: RedshiftDbtAccessPolicy
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          -  
+            Effect: Allow
+            Action:
+              - s3:Get*
+              - s3:List*
+            Resource: 
+              - arn:aws:s3:::aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/*
+              - arn:aws:s3:::aws-bigdata-blog
+      Roles:
+        - !Ref RedshiftAccessRole  
+
+  RedshiftSubnetGroup:
+    Type: 'AWS::Redshift::ClusterSubnetGroup'
+    Properties:
+      Description: Redshift in private subnet
+      SubnetIds:
+        - !Ref PrivateSubnet
+
+  RedshiftSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: "Security group for Redshift"
+      VpcId: !Ref VPC
+  
+  RedshiftSecret:
+    Type: AWS::SecretsManager::Secret
+    Properties:
+      Name: "redshift-creds"
+      Description: 'This is the secret for Redshift cluster'
+      GenerateSecretString:
+        SecretStringTemplate: '{"username": "awsuser", "dbname": "dev"}'
+        GenerateStringKey: 'password'
+        PasswordLength: 16
+        ExcludePunctuation: True
+
+  RedshiftCluster:
+    Type: 'AWS::Redshift::Cluster'
+    DependsOn: 
+    - InternetGatewayAttachment
+    - AccessPolicy
+    Properties:
+      PubliclyAccessible: False
+      ClusterType: 'single-node'
+      NodeType: 'dc2.large'
+      DBName: 'dev'
+      MasterUsername: 'awsuser'
+      MasterUserPassword: '{{resolve:secretsmanager:redshift-creds:SecretString:password}}'
+      Port: 5439
+      ClusterSubnetGroupName: !Ref RedshiftSubnetGroup
+      IamRoles: 
+        - !GetAtt RedshiftAccessRole.Arn
+      VpcSecurityGroupIds:
+        - !Ref RedshiftSecurityGroup
+
   # Lambda to ingest data to Redshift
   LambdaIngestFunction:
     Type: AWS::Lambda::Function
@@ -145,6 +349,39 @@ Resources:
       LayerName: RedshiftUtil
       LicenseInfo: MIT
 
+  LambdaSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: EC2 Security Group for Lambda function
+      VpcId:
+        Ref: VPC
+
+  LambdaToRedshiftSgRule:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties: 
+      Description: Access from AWS Batch for DBT
+      GroupId: !Ref RedshiftSecurityGroup 
+      IpProtocol: tcp
+      SourceSecurityGroupId: !Ref LambdaSecurityGroup
+      FromPort: 5439
+      ToPort: 5439
+
+  LambdaIngestFunctionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      Path: /
+
   LambdaAccessPolicy:
     Type: AWS::IAM::ManagedPolicy
     Properties:
@@ -167,4 +404,35 @@ Resources:
     Properties:
       ServiceToken: !GetAtt LambdaIngestFunction.Arn
 
-
+Outputs:
+  VPC:
+    Description: VPC ID
+    Value: !Ref VPC
+    Export:
+      Name: !Sub "${AWS::StackName}-VPC"
+  PrivateSubnet:
+    Description: Private subnet ID
+    Value: !Ref PrivateSubnet
+    Export:
+      Name: !Sub "${AWS::StackName}-PrivateSubnet"
+  PublicSubnet:
+    Description: Public subnet ID
+    Value: !Ref PublicSubnet
+    Export:
+      Name: !Sub "${AWS::StackName}-PublicSubnet"
+  RedshiftIamRole:
+    Description: Name of IAM Role used by Reshift cluster
+    Value: !GetAtt RedshiftAccessRole.Arn
+  RedshiftClusterName:
+    Description: Name of Redshift cluster
+    Value: !Ref RedshiftCluster
+  RedshiftSecurityGroup:
+    Description: Security group of Redshift cluster
+    Value: !Ref RedshiftSecurityGroup
+    Export:
+      Name: !Sub "${AWS::StackName}-RedshiftSecurityGroup"
+  RedshiftClusterEndpoint:
+    Description: Redshift cluster endpoint
+    Value: !Sub "${RedshiftCluster.Endpoint.Address}"
+    Export:
+      Name: !Sub "${AWS::StackName}-RedshiftClusterEndpoint"
