--- a/redshift (2).yml
+++ b/redshift (2).yml
@@ -309,17 +309,17 @@ Resources:
               run_query(conn, """
                   COPY public.nation FROM 's3://aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/sample_data/nation/nation.tbl.'
                   iam_role '${RedshiftAccessRole.Arn}'
-                  region 'us-east-1' lzop delimiter '|' COMPUPDATE PRESET;
+                  region 'us-west-1' lzop delimiter '|' COMPUPDATE PRESET;
               """)
               run_query(conn, """
                   copy public.customer from 's3://aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/sample_data/customer/customer.tbl.'
                   iam_role '${RedshiftAccessRole.Arn}'
-                  region 'us-east-1' lzop delimiter '|' COMPUPDATE PRESET;
+                  region 'us-west-1' lzop delimiter '|' COMPUPDATE PRESET;
               """)
               run_query(conn, """
                   copy public.orders from 's3://aws-bigdata-blog/artifacts/automate-redshift-etl-dbt/sample_data/orders/orders.tbl.'
                   iam_role '${RedshiftAccessRole.Arn}'
-                  region 'us-east-1' lzop delimiter '|' COMPUPDATE PRESET;
+                  region 'us-west-1' lzop delimiter '|' COMPUPDATE PRESET;
               """)
               cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, {})
       Handler: "index.lambda_handler"
