--- a/redshift (2).yml
+++ b/redshift (2).yml
@@ -23,7 +23,7 @@ Resources:
     Properties:
       CidrBlock: 172.16.0.0/24
       VpcId: !Ref VPC
-      AvailabilityZone: "us-east-1a"
+      AvailabilityZone: "us-west-1a"
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
@@ -34,7 +34,7 @@ Resources:
     Properties:
       CidrBlock: 172.16.2.0/24
       VpcId: !Ref VPC
-      AvailabilityZone: "us-east-1a"
+      AvailabilityZone: "us-west-1a"
       Tags:
         - Key: Name
           Value: PrivateSubnet
