--- a/redshift (2).yml
+++ b/redshift (2).yml
@@ -5,7 +5,7 @@ AWSTemplateFormatVersion: 2010-09-09
 
 AWSTemplateFormatVersion: 2010-09-09
 
-Description: 'Template to deploy Redshift and VPC with public and private subnet, and ingest data to Redshift'
+Description: 'Template to deploy Redshift and VPC with public and private subnet, and ingest data to Redshifqt'
 
 Resources:
 
